--- a/OOP_CA.csproj
+++ b/OOP_CA.csproj
@@ -282,6 +282,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\LevelManager.cs" />
     <Compile Include="Assets\Script\pin.cs" />
     <Compile Include="Assets\Script\PinGameManager.cs" />
     <Compile Include="Assets\Script\spawn.cs" />
